--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,13 @@
+HomeBloodPressure
+
+Ruby version 2.0.0p47
+
+Rails 4
+
+SQLite 3
+Devise
+
+
 == README
 
 This README would normally document whatever steps are necessary to get the
