--- a/README.rdoc
+++ b/README.rdoc
@@ -1,38 +1,13 @@
-HomeBloodPressure
+HomeBloodPressure v1.0
 
 Ruby version 2.0.0p47
 
 Rails 4
 
-SQLite 3
+Postgres
 Devise
 Dynamic form
 
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This was the first heroku app which had the single long info landing page.
+All the logic is here to deal with users returning late to give old readings,
+but it is messy.
