--- a/README.rdoc
+++ b/README.rdoc
@@ -1,38 +1,13 @@
-HomeBloodPressure
+HomeBloodPressure v2.2
 
-Ruby version 2.0.0p47
+Ruby version 2.0.0p353
 
 Rails 4
 
-SQLite 3
+Postgres
 Devise
 Dynamic form
 
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Changes made to make site work only with a signed in user.
+New landing page created with sign-up form.
+Main site nav improved to be more consistent.
