url is parsed into landing page heading, page title and passed through to find-out-more

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,4 +40,7 @@ en:
           one:   ""
           other: ""
         body:    "Please check the following:"
-
+  
+  how to blood pressure: how to treat blood pressure
+  how to bp: how to treat BP
+  how to hypertension: how to treat hypertension
